--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,92 @@
+body {
+  background: #e6e6e6;
+  font-family: "Rubik", sans-serif;
+}
+
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
 a {
   text-decoration: none;
-  color: purple;
+  color: #62929a;
+}
+
+a:hover {
+  color: #c86b85;
+}
+
+header {
+  margin-bottom: 30px;
+}
+
+h1 {
+  font-weight: 800;
+  font-size: 34px;
+  line-height: 1.5;
+  color: #c86b85;
+  text-align: center;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #62929a;
+  margin: 10px auto;
+  text-align: center;
+}
+
+form {
+  padding: 30px;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.instruction {
+  padding: 16px;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  width: 80%;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 20px;
+  color: #363434;
+}
+
+.submit-button {
+  margin-left: 10px;
+  background: #c86b85;
+  color: #ffffff;
+  border: none;
+  border-radius: 50px;
+  font-size: 16px;
+  padding: 14px 24px;
+  width: 125px;
+}
+
+.submit-button:hover {
+  background: #62929a;
+  transition: all 30ms ease-in-out;
+  cursor: pointer;
+}
+
+.affirmation {
+  font-size: 16px;
+  background: #ffffff;
+  color: #363434;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 20px;
+  line-height: 1.5;
+  border-left: 6px solid #c86b85;
+}
+
+footer {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 20px;
+  color: #363434;
 }
