--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
+:root {
+  --main-color: #77628c;
+  --secondary-color: #6ac1b8;
+  --text-color: #2a2438;
+}
+
 body {
-  background: #e6e6e6;
+  background: rgba(219, 216, 227, 0.2);
   font-family: "Rubik", sans-serif;
 }
 
@@ -10,11 +16,11 @@ body {
 
 a {
   text-decoration: none;
-  color: #62929a;
+  color: var(--secondary-color);
 }
 
 a:hover {
-  color: #c86b85;
+  color: var(--main-color);
 }
 
 header {
@@ -25,7 +31,7 @@ h1 {
   font-weight: 800;
   font-size: 34px;
   line-height: 1.5;
-  color: #c86b85;
+  color: var(--main-color);
   text-align: center;
 }
 
@@ -33,7 +39,7 @@ h2 {
   font-weight: 600;
   font-size: 24px;
   line-height: 1.5;
-  color: #62929a;
+  color: var(--secondary-color);
   margin: 10px auto;
   text-align: center;
 }
@@ -54,12 +60,12 @@ form {
   font-size: 16px;
   border-radius: 50px;
   line-height: 20px;
-  color: #363434;
+  color: var(--text-color);
 }
 
 .submit-button {
   margin-left: 10px;
-  background: #c86b85;
+  background: var(--main-color);
   color: #ffffff;
   border: none;
   border-radius: 50px;
@@ -69,7 +75,7 @@ form {
 }
 
 .submit-button:hover {
-  background: #62929a;
+  background: var(--secondary-color);
   transition: all 30ms ease-in-out;
   cursor: pointer;
 }
@@ -77,16 +83,17 @@ form {
 .affirmation {
   font-size: 16px;
   background: #ffffff;
-  color: #363434;
+  color: var(--text-color);
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   padding: 20px;
   line-height: 1.5;
-  border-left: 6px solid #c86b85;
+  border-left: 6px solid var(--main-color);
+  text-align: center;
 }
 
 footer {
   text-align: center;
   font-size: 14px;
   margin-top: 20px;
-  color: #363434;
+  color: var(--text-color);
 }
