--- a/src/styles.css
+++ b/src/styles.css
@@ -44,13 +44,30 @@ h2 {
   text-align: center;
 }
 
-form {
+h3 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.5;
+  color: var(--main-color);
+}
+
+.form-container {
   padding: 30px;
   background: #ffffff;
   border-radius: 10px;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-  display: flex;
   margin-bottom: 30px;
+}
+
+form {
+  display: flex;
+}
+
+.hint {
+  font-size: 12px;
+  line-height: 1.5;
+  margin: 2px 0 0 10px;
+  opacity: 0.7;
 }
 
 .instruction {
@@ -88,7 +105,26 @@ form {
   padding: 20px;
   line-height: 1.5;
   border-left: 6px solid var(--main-color);
-  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
 
 footer {
